修正 Trinity 环终态种子保留