@@ -26,6 +26,7 @@ import java.util.Map;
  * @param scheduleStates bounded search states visited
  * @param mipNanos       deterministic opportunity time plus ojAlgo solver time
  * @param quality        exact proof strength retained by this cycle
+ * @param retainedSeed   internal balance that must remain after downstream settlement
  */
 public record TrinityCycleSelection(
                                     int componentIndex,
@@ -39,25 +40,28 @@ public record TrinityCycleSelection(
                                     Map<AEKey, BigInteger> exportableNet,
                                     int scheduleStates,
                                     long mipNanos,
-                                    TrinityPlanQuality quality) {
+                                    TrinityPlanQuality quality,
+                                    Map<AEKey, BigInteger> retainedSeed) {
 
     /**
-     * Copies every retained collection so graph orchestration never observes solver-owned mutable state.
+     * Validates top-level accounting while trusting the planner-owned collection elements.
      */
     public TrinityCycleSelection {
         if (componentIndex < 0 || prefixOrder == null || localOrder == null || localOrder.isEmpty() ||
                 suffixOrder == null || repetitions == null ||
                 repetitions.signum() <= 0 || minimumSeed == null || initialInputs == null || netChange == null ||
-                exportableNet == null || scheduleStates < 0 || mipNanos < 0L || quality == null) {
+                exportableNet == null || scheduleStates < 0 || mipNanos < 0L || quality == null ||
+                retainedSeed == null) {
             throw new IllegalArgumentException("A Trinity cycle selection requires complete exact accounting");
         }
-        prefixOrder = List.copyOf(prefixOrder);
-        localOrder = List.copyOf(localOrder);
-        suffixOrder = List.copyOf(suffixOrder);
-        minimumSeed = copyAmounts(minimumSeed, false);
-        initialInputs = copyAmounts(initialInputs, false);
-        netChange = copyAmounts(netChange, true);
-        exportableNet = copyAmounts(exportableNet, false);
+        prefixOrder = Collections.unmodifiableList(prefixOrder);
+        localOrder = Collections.unmodifiableList(localOrder);
+        suffixOrder = Collections.unmodifiableList(suffixOrder);
+        minimumSeed = amountsView(minimumSeed, false);
+        initialInputs = amountsView(initialInputs, false);
+        netChange = amountsView(netChange, true);
+        exportableNet = amountsView(exportableNet, false);
+        retainedSeed = amountsView(retainedSeed, false);
         LinkedHashMap<AEKey, BigInteger> calculatedNet = new LinkedHashMap<>();
         mergeNet(calculatedNet, prefixOrder, BigInteger.ONE);
         mergeNet(calculatedNet, localOrder, repetitions);
@@ -100,7 +104,40 @@ public record TrinityCycleSelection(
                 exportableNet,
                 scheduleStates,
                 mipNanos,
-                TrinityPlanQuality.PROVED_OPTIMAL);
+                TrinityPlanQuality.PROVED_OPTIMAL,
+                Map.of());
+    }
+
+    /**
+     * Compatibility constructor for selections created before terminal seed refinement.
+     */
+    public TrinityCycleSelection(
+                                 int componentIndex,
+                                 List<TrinityVariantFiring> prefixOrder,
+                                 List<TrinityVariantFiring> localOrder,
+                                 BigInteger repetitions,
+                                 List<TrinityVariantFiring> suffixOrder,
+                                 Map<AEKey, BigInteger> minimumSeed,
+                                 Map<AEKey, BigInteger> initialInputs,
+                                 Map<AEKey, BigInteger> netChange,
+                                 Map<AEKey, BigInteger> exportableNet,
+                                 int scheduleStates,
+                                 long mipNanos,
+                                 TrinityPlanQuality quality) {
+        this(
+                componentIndex,
+                prefixOrder,
+                localOrder,
+                repetitions,
+                suffixOrder,
+                minimumSeed,
+                initialInputs,
+                netChange,
+                exportableNet,
+                scheduleStates,
+                mipNanos,
+                quality,
+                Map.of());
     }
 
     private static void mergeNet(
@@ -114,14 +151,10 @@ public record TrinityCycleSelection(
                         BigInteger::add)));
     }
 
-    private static Map<AEKey, BigInteger> copyAmounts(Map<AEKey, BigInteger> source, boolean signed) {
-        LinkedHashMap<AEKey, BigInteger> copied = new LinkedHashMap<>();
-        source.forEach((key, amount) -> {
-            if (key == null || amount == null || (signed ? amount.signum() == 0 : amount.signum() <= 0)) {
-                throw new IllegalArgumentException("A Trinity cycle selection amount violates its accounting role");
-            }
-            copied.put(key, amount);
-        });
-        return Collections.unmodifiableMap(copied);
+    private static Map<AEKey, BigInteger> amountsView(Map<AEKey, BigInteger> source, boolean signed) {
+        if (source.values().stream().anyMatch(amount -> signed ? amount.signum() == 0 : amount.signum() <= 0)) {
+            throw new IllegalArgumentException("A Trinity cycle selection amount violates its accounting role");
+        }
+        return Collections.unmodifiableMap(source);
     }
 }
